--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
 	      <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
 	    </div>
 	  </footer>
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <p>test</p>
+        </div>
+    </div>
 	</div>
 
     <!-- Optional JavaScript -->
